--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,18 +10,31 @@
 <body>
     <h1>Login</h1>
     <div id="g_id_onload"
-         data-client_id="245073186631-0aq6pl4ailrqeruehjuvhkk35iuem2e6.apps.googleusercontent.com"
-         data-login_uri="http://localhost:3000/login"
-         data-auto_prompt="true"
-         data-context="use">
+        data-client_id="245073186631-0aq6pl4ailrqeruehjuvhkk35iuem2e6.apps.googleusercontent.com"
+        data-login_uri="http://localhost:3000/login"
+        data-auto_prompt="true"
+        data-context="use"
+        data-callback="handleCredentialResponse">
     </div>
     <div class="g_id_signin"
-         data-type="standard"
-         data-size="large"
-         data-theme="outline"
-         data-text="sign_in_with"
-         data-shape="rectangular"
-         data-logo_alignment="left">
+        data-type="standard"
+        data-size="large"
+        data-theme="outline"
+        data-text="sign_in_with"
+        data-shape="rectangular"
+        data-logo_alignment="left">
     </div>
+    <!-- <script>
+        function handleCredentialResponse(response) {
+           const responsePayload = decodeJwtResponse(response.credential);
+      
+           console.log("ID: " + responsePayload.sub);
+           console.log('Full Name: ' + responsePayload.name);
+           console.log('Given Name: ' + responsePayload.given_name);
+           console.log('Family Name: ' + responsePayload.family_name);
+           console.log("Image URL: " + responsePayload.picture);
+           console.log("Email: " + responsePayload.email);
+        }
+      </script> -->
 </body>
 </html>
